--- a/runMaze.html
+++ b/runMaze.html
@@ -4,14 +4,23 @@
 	<title></title>
 </head>
 <center>
-<body>
-	<link rel="stylesheet" type="text/css" href="runMaze.css">
-	<h1>LABERINTO</h1>
+<body onkeydown="tecla(event);">
+	<link rel="stylesheet" type="text/css" href="css/runMaze.css">
+	<h1>THE RUN MAZE</h1>
+	<h3>Jugue con las flechas del Teclado o con los Botones</h3>
 	<div>
 	<div id="laberinto">
     </div>
     </div>
-    <script type="text/javascript" src="runMaze.js"></script>
+    
+   <table>
+    	<tr><td></td><td><button id="arriba">Arriba</button></td><td></td></tr>
+    	<tr><td><button id="izquierda">Izquierda</button></td><td></td><td><button id="derecha">Derecha</button></td></tr>
+    	<tr><td></td><td><button id="abajo">Abajo</button></td><td></td></tr>
+
+    </table>
+
+    <script type="text/javascript" src="js/runMaze.js"></script>
 </body>
 </center>
 </html>
