--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
 <body onkeydown="tecla(event);">
 	<link rel="stylesheet" type="text/css" href="css/runMaze.css">
 	<h1>THE RUN MAZE</h1>
-	<h3>Jugue con las flechas del Teclado o con los Botones</h3>
+	<h3>Juegue con las flechas del Teclado o con los Botones</h3>
 	<div>
 	<div id="laberinto">
     </div>
     </div>
-    
+   
    <table>
     	<tr><td></td><td><button id="arriba">Arriba</button></td><td></td></tr>
     	<tr><td><button id="izquierda">Izquierda</button></td><td></td><td><button id="derecha">Derecha</button></td></tr>
     	<tr><td></td><td><button id="abajo">Abajo</button></td><td></td></tr>
-
-    </table>
+   </table>
 
     <script type="text/javascript" src="js/runMaze.js"></script>
 </body>
