--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <center>
-<body onkeydown="tecla(event);">
+<body onkeydown="tecla(event)">
 	<link rel="stylesheet" type="text/css" href="css/runMaze.css">
 	<h1>THE RUN MAZE</h1>
 	<h3>Juegue con las flechas del Teclado o con los Botones</h3>
